# test-nexus

./: .gitignore  .netrc  README.md
go/: README.md  go-firewall-test.mod  go.mod  go.mod.backup  go.sum  main.go  setup-go-nexus.sh
maven/: pom.xml  settings.xml
npm/: .npmrc  README.md  package.json
python/: README.md  pyproject.toml
python/python_project_1.0.egg-info/: PKG-INFO  SOURCES.txt
python/simple/: index.html
python2/: requirements.txt
